# bulkdesk

./: .gitignore  AGENTS.md  CONTEXT.md  FEATURES.md  dev.sh  移动端记录.md
backend/: alembic.ini  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/v1/: auth.py  customer.py  dashboard.py  employee.py  inventory.py  level.py  mobile.py  order.py  order_delivery.py  order_draft.py  product.py  return_order.py  router.py  upload.py
backend/app/core/: config.py  database.py  deps.py  permissions.py  redis.py  security.py  storage.py
backend/app/models/: __init__.py  base.py  customer.py  employee.py  inventory.py  order.py  order_delivery.py  order_draft.py  product.py  return_order.py
backend/app/schemas/: auth.py  common.py  customer.py  dashboard.py  employee.py  inventory.py  mobile.py  order.py  order_delivery.py  order_draft.py  product.py  return_order.py  upload.py
backend/app/services/: auth_service.py  customer_service.py  dashboard_service.py  employee_service.py  inventory_service.py  level_service.py  mobile_service.py  order_delivery_service.py  order_draft_service.py  order_service.py  product_service.py  return_order_service.py
backend/migrations/: README  env.py  init.sql  reset.sql
backend/migrations/incremental/: 2026-07-17_商品级库存预警.sql  2026-07-19_新增订单配送管理.sql  2026-07-19_订单发货人.sql  2026-07-19_订单履约与退货单.sql  2026-07-19_订单库存分配.sql  2026-07-20_修正退货配送任务外键.sql  2026-07-20_新增订单收款凭证.sql  2026-07-20_退货来源追踪与员工多角色.sql  2026-07-22_移动端草稿订单.sql  2026-07-22_配送签名凭证.sql
backend/migrations/versions/: 75f80d2c9c04_initial_schema.py
backend/tests/: test_business_logic.py  test_datetime_serialization.py  test_mobile_delivery_signature.py  test_mobile_draft_contract.py  test_mobile_read_contract.py  test_price_rules.py  test_return_order_mainline.py  test_return_role_migration.py  test_role_permissions.py  test_role_runtime.py  test_single_product_contract.py
docs/: architecture.md  (+3 more)
(+296 files in other folders)
